fixing layout problems on mobile devices

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -153,7 +153,7 @@ footer {
 		}
 
 		p {
-			display: inline-block;
+			display: inline;
 			line-height: 60px;
 			vertical-align: middle;
 			margin: 0;
